# pdf-encrypt

./: .gitignore  CHANGELOG.md  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
src/: index.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
