[package]
name = "pdf-encrypt"
version = "0.1.0"
description = "A simple desktop tool to password-protect PDF files"
authors = ["bambamboole"]
license = "MIT"
edition = "2021"

[lib]
name = "pdf_encrypt_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
lopdf = "0.39"
rand = "0.9"
